UV/Image Editor breaks on mode change + undo #34866

Closed
opened 2013-04-04 15:00:15 +02:00 by Bjørnar Frøyse · 8 comments

%%%--- Operating System, Graphics card ---

Windows 7 64bit, Geforce 560ti

- Blender version with error, and version that worked ---

Successfully repeated in 2.66.5 r55767

And was actually able to reproduce this in 2.49b... Wow.

- Short description of error ---

Assigning a texture to selected faces, then doing a certain pattern of mode switching and undoing will either break the UV/image editor or crash Blender.
Screenshot of the error (with console errors visible too) is attached.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open attached .blend file
  2. Enter edit mode
  3. Make sure all faces are selected
  4. Assign a new image to the mesh (click New in the image editor)
  5. Enter object mode
  6. Undo (So the texture disappears from the image editor view)
  7. Enter edit mode
  8. Undo

The image editor should now look like it does in the attached screenshot.

This has not been 100% repeatable, but it happens more often than not. If nothing happens after step 8, repeat from step 5.

Sometimes Blender will even crash completely (quick exit, no error or crash dialog given) when returning to object mode, even if the image editor doesn't visually break.

Console outputs this error (among others):

Traceback (most recent call last):

File "C:\Program Files\Blender Foundation\Blender\2.66\scripts\startup\bl_ui\space_image.py", line 376, in draw
  if ima and ima.is_dirty:

AttributeError: 'ID' object has no attribute 'is_dirty'

location: :-1

%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, Geforce 560ti - Blender version with error, and version that worked --- Successfully repeated in 2.66.5 r55767 And was actually able to reproduce this in 2.49b... Wow. - Short description of error --- Assigning a texture to selected faces, then doing a certain pattern of mode switching and undoing will either break the UV/image editor or crash Blender. Screenshot of the error (with console errors visible too) is attached. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open attached .blend file 2. Enter edit mode 3. Make sure all faces are selected 4. Assign a new image to the mesh (click New in the image editor) 5. Enter object mode 6. Undo (So the texture disappears from the image editor view) 7. Enter edit mode 8. Undo The image editor should now look like it does in the attached screenshot. This has not been 100% repeatable, but it happens more often than not. If nothing happens after step 8, repeat from step 5. Sometimes Blender will even crash completely (quick exit, no error or crash dialog given) when returning to object mode, even if the image editor doesn't visually break. Console outputs this error (among others): Traceback (most recent call last): ``` File "C:\Program Files\Blender Foundation\Blender\2.66\scripts\startup\bl_ui\space_image.py", line 376, in draw if ima and ima.is_dirty: ``` AttributeError: 'ID' object has no attribute 'is_dirty' location: <unknown location>:-1 %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%How did you save this file? It's including the userpreferences, that's quite not standard....
On loading the file it also complains about a missing fbx add-on. Just do tests on 'factory settings' to be sure?

I only could do a crash once, right after adding the image:
http://www.pasteall.org/41086

Redoing your cycle of instructions didn't crash ever.

%%%

%%%How did you save this file? It's including the userpreferences, that's quite not standard.... On loading the file it also complains about a missing fbx add-on. Just do tests on 'factory settings' to be sure? I only could do a crash once, right after adding the image: http://www.pasteall.org/41086 Redoing your cycle of instructions didn't crash ever. %%%

%%%Here's a video recorded after renaming the 2.66 folder in %appdata%\Blender Foundation\Blender. That should count as a factory reset, right?

http://www.youtube.com/watch?v=cqX8imiQyxs

I could also reproduce this behaviour on two other computers here. (As well as in 2.49b, which surprised me)

Here's a console screenshot with --debug active: http://www.pasteall.org/pic/show.php?id=48636

Should be noted that I usually can't get it to crash from this, but it does happen.%%%

%%%Here's a video recorded after renaming the 2.66 folder in %appdata%\Blender Foundation\Blender\. That should count as a factory reset, right? http://www.youtube.com/watch?v=cqX8imiQyxs I could also reproduce this behaviour on two other computers here. (As well as in 2.49b, which surprised me) Here's a console screenshot with --debug active: http://www.pasteall.org/pic/show.php?id=48636 Should be noted that I usually can't get it to *crash* from this, but it does happen.%%%

%%%Regarding how I saved the file, it was probably a renamed copy of a near-factory startup.blend. In hindsight probably a bad way of doing it, but I wanted to be sure that whoever opened the file would see exactly the same as me.%%%

%%%Regarding how I saved the file, it was probably a renamed copy of a near-factory startup.blend. In hindsight probably a bad way of doing it, but I wanted to be sure that whoever opened the file would see exactly the same as me.%%%

%%%Ton, found a typo in code which likely caused your crash.

As for this issue -- i could not reproduce it. IT could be caused by some addon or so. Is it possible to reproduce the issue after loading factory settings?%%%

%%%Ton, found a typo in code which likely caused your crash. As for this issue -- i could not reproduce it. IT could be caused by some addon or so. Is it possible to reproduce the issue after loading factory settings?%%%

%%%I could reproduce it after loading factory settings, exactly as described in the report here. Will test it on two other computers tomorrow.

Here's my system info, if it helps. Prior to printing this, Blender Foundation folder in %Appdata% was deleted, and Blender was extracted to a new folder, to avoid all residue of old stuff and/or addons.

http://www.pasteall.org/41089/text%%%

%%%I could reproduce it after loading factory settings, exactly as described in the report here. Will test it on two other computers tomorrow. Here's my system info, if it helps. Prior to printing this, Blender Foundation folder in %Appdata% was deleted, and Blender was extracted to a new folder, to avoid all residue of old stuff and/or addons. http://www.pasteall.org/41089/text%%%
Member

%%%I found the issue, fix goes to svn.

It will give a usablity regression though - the undo stack for editmode now will get freed if you are undo-ing outside editmode.%%%

%%%I found the issue, fix goes to svn. It will give a usablity regression though - the undo stack for editmode now will get freed if you are undo-ing outside editmode.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34866
No description provided.