Bug fix #34866

Global undo/redo now clears the local undo editmode stack entirely.

Error goes back to the 2.3 days, when undo was added.

Global undo refreshes the entire internal database, so all ID pointers get invalid.
This cases editmode undo storage to fail, if it uses ID pointers as well.

The error was that for any Mesh undo stack, a single global undo would make the
mesh stack corrupt. Back in edit mode, on undo you'd lose assigned texture images, 
or get bad crashes.

The downside is that people expect this to work... it's a fun feature to maintain
stacks separately. Having this instable is not acceptable though. Needs quite some
redesign work to solve it (like Dalai's kill-the-tface project :)